#7584 RSV model meta update fix. Colors update/evaluate fix (+ integer values parser fix)
Former-commit-id: 5627a25ca50643c3f25c7e95a81dde7419f5ebbe